Modify js & css

--- a/carousel/index.html
+++ b/carousel/index.html
@@ -6,10 +6,9 @@
 <title>カルーセル with jQuery</title>
 <link rel="stylesheet" href="css/style.css">
 <script src="js/jquery-2.1.1.min.js"></script>
-<script src="js/script.js"></script>
 <script src="js/photo.js"></script>
 </head>
-<body id="vol"  class="episode3">
+<body id="vol">
 <div class="wr">
 
 <div class="contents">
