--- a/carousel_es6/index.html
+++ b/carousel_es6/index.html
@@ -14,7 +14,7 @@
 
 <article class="txt">
 	<div class="volTitleWr">
-		<h1 class="volTitle">カルーセル with jQuery</span></h1>
+		<h1 class="volTitle">カルーセル with ES6</span></h1>
 	</div>
 	<div class="thumb">
 		<ul class="cf">
