--- a/bgSizeContain/index.html
+++ b/bgSizeContain/index.html
@@ -9,7 +9,7 @@
 <script src="js/script.js"></script>
 </head>
 
-<body>テスト
+<body>
 	<div class="wr">
 		<section>
 			<h1>jsなし（高さ150px固定 & background-size:contain）</h1>
